--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT = 3001
-URL = "mongodb://127.0.0.1:27017/bookstore"
+URL = "mongodb+srv://vedprakashsharma2024:a3vNCXUkSCd6xEl2@bookstorecluster.rsc3nww.mongodb.net/?retryWrites=true&w=majority&appName=bookstorecluster"
 Admin_Key= "admin-key"
 Student_Key= "student-key"
