--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
     "nodemon": "^3.1.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "url": "^0.11.3"
   }
 }
